[tool.poetry]
name = "python_everhour"
version = "0.1.0"
description = ""
authors = ["Erik LaBianca <erik.labianca@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.12"
requests = "2.28.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
pytest-recording = "^0.13.2"
isort = "^5.13.2"
black = "^24.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
